[package]
name = "minebot-2"
version = "0.1.0"
authors = ["Adam Soutar <adam@overflo.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
reqwest = { version = "0.11.3", features = ["blocking"] }
serde = "1.0.126"
serde_json = "1.0.64"
